fix header overflow

--- a/src/scss/_trumps.shame.scss
+++ b/src/scss/_trumps.shame.scss
@@ -62,3 +62,7 @@ iframe[src*="google.com/maps"] {
 .site-title {
     display: inline-block;
 }
+
+.header-wrap {
+  overflow: hidden;
+}
